--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,26 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800,900&display=swap"); /* Обнуление стилей */
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/OpenSans-Regular.woff2") format("woff2"), url("../fonts/OpenSans-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/OpenSans-SemiBold.woff2") format("woff2"), url("../fonts/OpenSans-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Overpass";
+  src: url("../fonts/Overpass-Bold.woff2") format("woff2"), url("../fonts/Overpass-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+/* Обнуление стилей */
 * {
   padding: 0px;
   margin: 0px;
@@ -52,7 +73,7 @@ html {
 input,
 button,
 textarea {
-  font-family: "Montserrat";
+  font-family: "Open Sans", sans-serif;
   font-size: inherit;
 }
 
@@ -67,12 +88,12 @@ a {
 }
 
 body {
-  color: #252b42;
+  color: #100c46;
   line-height: 1;
-  font-family: "Montserrat";
-  font-size: 14px;
-  font-weight: 500;
-  background: #fafafa;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  background: #ffffff;
 }
 
 html {
@@ -100,9 +121,12 @@ html {
 }
 
 [class*=__container] {
-  max-width: 1076px;
-  margin: 0px auto;
-  padding: 0px 15px;
+  padding: 0px 85px;
+}
+@media (max-width: 1200px) {
+  [class*=__container] {
+    padding: 0px 15px;
+  }
 }
 [class*=-ibg] {
   position: relative;
@@ -115,4 +139,194 @@ html {
   left: 0;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.header {
+  z-index: 50;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.header__logo {
+  padding: 17px 0px 17px 20px;
+}
+.social-header {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px;
+  background-color: #6257fe;
+}
+.page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #6257fe;
+}
+.main__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+@media (max-width: 767.98px) {
+  .main__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.main__body {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40.23%;
+          flex: 0 0 40.23%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  padding: 100px 20px 100px 0px;
+}
+@media (max-width: 1200px) {
+  .main__body {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 41.5%;
+            flex: 0 0 41.5%;
+  }
+}
+@media (max-width: 767.98px) {
+  .main__body {
+    -ms-flex-item-align: stretch;
+        align-self: stretch;
+    padding: 100px 0px 30px 0px;
+  }
+}
+.main__header {
+  color: #fff;
+}
+.main__header .header-block__label {
+  color: #fff;
+}
+.main__header:not(:last-child) {
+  margin: 0px 0px 30px 0px;
+}
+@media (max-width: 767.98px) {
+  .main__header:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+}
+.main__text {
+  color: #fff;
+  max-width: 400px;
+}
+.main__text:not(:last-child) {
+  margin: 0px 0px 67px 0px;
+}
+@media (max-width: 767.98px) {
+  .main__text:not(:last-child) {
+    margin: 0px 0px 30px 0px;
+  }
+}
+.main__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  position: relative;
+  margin: 0px -85px 0px 0px;
+}
+@media (max-width: 1200px) {
+  .main__image {
+    margin: 0px -15px 0px 0px;
+  }
+}
+@media (max-width: 767.98px) {
+  .main__image {
+    margin: 0px -15px;
+    padding: 0px 0px 95% 0px;
+  }
+}
+.main__picture {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+  left: 0;
+}
+
+.header-block__label {
+  font-size: 16px;
+  line-height: 1.37;
+  color: #6257fe;
+}
+.header-block__label:not(:last-child) {
+  margin: 0px 0px 7px 0px;
+}
+.header-block__title {
+  font-family: "Overpass", sans-serif;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.26;
+}
+@media (max-width: 1200px) {
+  .header-block__title {
+    font-size: 44px;
+  }
+}
+
+.text {
+  line-height: 1.6;
+}
+
+.button {
+  display: inline-block;
+  padding: 19px 46px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 178%;
+  color: #100c46;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+.button:hover {
+  background-color: #100c46;
+  color: #fff;
+}
+@media (max-width: 767.98px) {
+  .button {
+    width: 100%;
+  }
 }
