--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,33 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800,900&display=swap");
+//@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800,900&display=swap");//
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/OpenSans-Regular.woff2") format("woff2"), url("../fonts/OpenSans-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/OpenSans-SemiBold.woff2") format("woff2"), url("../fonts/OpenSans-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Overpass";
+  src: url("../fonts/Overpass-Bold.woff2") format("woff2"), url("../fonts/Overpass-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 // основной шрифт и размер //
 
-$fontFamily: "Montserrat";
-$fontWeight: 500;
-$fontSize: 14px;
-$mainColor: #252b42;
+$fontFamily: "Open Sans", sans-serif;
+$fontWeight: 400;
+$fontSize: 20px;
+$mainColor: #100c46;
 
 @import "_null";
 
@@ -31,9 +53,12 @@ html {
 }
 
 [class*="__container"] {
-  max-width: 1076px; // сначала контейнер был 1046 как на макете, стал 1076 изза padding 30px
-  margin: 0px auto;
-  padding: 0px 15px;
+  //max-width: 1300px; // сначала контейнер был 1270 как на макете, стал 1300 изза padding 30px
+  //margin: 0px auto;
+  padding: 0px 85px;
+  @media (max-width: 1200px) {
+    padding: 0px 15px;
+  }
   @media (max-width: 1087px) {
     // max-width: 970px;
   }
@@ -58,3 +83,194 @@ html {
 }
 
 //=================== Общие стили  ================================//
+
+//=================== header  ================================//
+.header {
+  z-index: 50;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  // .header__logo
+
+  &__logo {
+    padding: 17px 0px 17px 20px;
+  }
+
+  // .header__social
+
+  &__social {
+  }
+}
+.social-header {
+  padding: 20px;
+  display: flex;
+  gap: 25px;
+  background-color: #6257fe;
+  // .social-header__item
+
+  &__item {
+  }
+}
+
+//=================== header  ================================//
+
+//=================== main  ================================//
+.page {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  // .page__section
+
+  &__section {
+  }
+}
+.main {
+  flex: 1 0 100%;
+  display: flex;
+  background-color: #6257fe;
+  // .main__container
+
+  &__container {
+    display: flex;
+    flex: 1 1 auto;
+    @media (max-width: 767.98px) {
+      flex-direction: column;
+    }
+  }
+
+  // .main__body
+
+  &__body {
+    flex: 0 0 40.23%;
+    align-self: center;
+    padding: 100px 20px 100px 0px;
+    @media (max-width: 1200px) {
+      flex: 0 0 41.5%;
+    }
+    @media (max-width: 767.98px) {
+      align-self: stretch;
+      padding: 100px 0px 30px 0px;
+    }
+  }
+
+  // .main__header
+
+  &__header {
+    color: #fff;
+    .header-block__label {
+      color: #fff;
+    }
+    &:not(:last-child) {
+      margin: 0px 0px 30px 0px;
+    }
+    @media (max-width: 767.98px) {
+      &:not(:last-child) {
+        margin: 0px 0px 20px 0px;
+      }
+    }
+  }
+
+  // .main__text
+
+  &__text {
+    color: #fff;
+    max-width: 400px;
+    &:not(:last-child) {
+      margin: 0px 0px 67px 0px;
+    }
+    @media (max-width: 767.98px) {
+      &:not(:last-child) {
+        margin: 0px 0px 30px 0px;
+      }
+    }
+  }
+
+  // .main__button
+
+  &__button {
+  }
+
+  // .main__image
+
+  &__image {
+    flex: 1 1 auto;
+    position: relative;
+    //padding: 0px 0px 70.9% 0px;первый вариант не понравился
+    margin: 0px -85px 0px 0px;
+    @media (max-width: 1200px) {
+      margin: 0px -15px 0px 0px;
+      //padding: 0px 0px 62.5% 0px; первый вариант не понравился
+    }
+    @media (max-width: 767.98px) {
+      margin: 0px -15px;
+      padding: 0px 0px 95% 0px;
+    }
+  }
+
+  // .main__picture
+
+  &__picture {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+  }
+}
+
+//=========== общие блоки  =================//
+.header-block {
+  // .header-block__label
+
+  &__label {
+    font-size: 16px;
+    line-height: 1.37;
+    &:not(:last-child) {
+      margin: 0px 0px 7px 0px;
+    }
+    color: #6257fe;
+  }
+
+  // .header-block__title
+
+  &__title {
+    font-family: "Overpass", sans-serif;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.26;
+    @media (max-width: 1200px) {
+      font-size: 44px;
+    }
+  }
+}
+.text {
+  line-height: 1.6;
+}
+.button {
+  display: inline-block;
+  padding: 19px 46px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 178%;
+  color: #100c46;
+  background-color: #ffffff;
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+  &:hover {
+    background-color: #100c46;
+    color: #fff;
+  }
+  @media (max-width: 767.98px) {
+    width: 100%;
+  }
+}
+//=========== общие блоки  =================//
+
+//=================== main  ================================//
