--- a/css/style.scss
+++ b/css/style.scss
@@ -129,14 +129,15 @@ html {
   }
 }
 .main {
-  flex: 1 0 100%;
-  display: flex;
+  //flex: 1 0 100%; еще не понравилось
+  //display: flex;
   background-color: #6257fe;
   // .main__container
 
   &__container {
     display: flex;
-    flex: 1 1 auto;
+    //flex: 1 1 auto; еще не понравилось
+    min-height: 100vh;
     @media (max-width: 767.98px) {
       flex-direction: column;
     }
@@ -250,6 +251,11 @@ html {
 }
 .text {
   line-height: 1.6;
+  p {
+    &:not(:last-child) {
+      margin: 0px 0px 30px 0px;
+    }
+  }
 }
 .button {
   display: inline-block;
@@ -271,6 +277,107 @@ html {
     width: 100%;
   }
 }
-//=========== общие блоки  =================//
+//=========== общие блоки =================//
 
-//=================== main  ================================//
+//=================== main ================================//
+
+//=================== about ================================//
+
+.about {
+  position: relative;
+  padding: 150px 0px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #100c46;
+  }
+  @media (max-width: 1200px) {
+    padding: 50px 0px;
+  }
+  @media (max-width: 991.98px) {
+    background-color: #100c46;
+    padding: 50px 0px 0px 0px;
+    &::before {
+      display: none;
+    }
+  }
+  // .about__container
+
+  &__container {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    //align-items: center;
+    align-items: flex-start;
+    @media (max-width: 991.98px) {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  }
+
+  // .about__body
+
+  &__body {
+    flex: 0 1 50%;
+    align-self: center;
+    padding: 0px 160px 0px 0px;
+    @media (max-width: 991.98px) {
+      padding: 0;
+      margin: 0px 0px 30px 0px;
+    }
+  }
+
+  // .about__header
+
+  &__header {
+    color: #6257fe;
+    &:not(:last-child) {
+      margin: 0px 0px 15px 0px;
+    }
+  }
+
+  // .about__text
+
+  &__text {
+    color: rgba(255, 255, 255, 0.8);
+  }
+
+  // .about__image
+
+  &__image {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 0px 0px 47.5% 0px;
+    margin: 0px 0px 0px -113px;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    @media (max-width: 991.98px) {
+      margin: 0px -15px;
+    }
+  }
+}
+.header-block {
+  // .header-block__label
+
+  &__label {
+  }
+
+  // .header-block__title
+
+  &__title {
+  }
+}
+.text {
+}
+
+//=================== about ================================//
