--- a/css/style.scss
+++ b/css/style.scss
@@ -353,6 +353,7 @@ html {
     flex: 1 1 auto;
     padding: 0px 0px 47.5% 0px;
     margin: 0px 0px 0px -113px;
+    filter: drop-shadow(0px 10px 50px rgba(16, 12, 70, 0.2));
     img {
       position: absolute;
       top: 0;
@@ -366,18 +367,158 @@ html {
     }
   }
 }
-.header-block {
-  // .header-block__label
+//=================== about ================================//
 
-  &__label {
+//=================== services ================================//
+
+.services {
+  overflow: hidden;
+  @media (max-width: 991.98px) {
+    background-color: #6257fe;
+  }
+  // .services__container
+
+  &__container {
+    display: flex;
+    align-items: center;
+    @media (max-width: 991.98px) {
+      flex-direction: column;
+    }
   }
 
-  // .header-block__title
+  // .services__body
+
+  &__body {
+    flex: 0 0 54.8%;
+    //align-self: center;
+    padding: 30px 40px 30px 0px;
+    @media (max-width: 991.98px) {
+      flex: 1 1 auto;
+      background-color: #fff;
+      margin: 0px -15px;
+      padding: 40px 15px;
+    }
+  }
+
+  // .services__header
+
+  &__header {
+    &:not(:last-child) {
+      margin: 0px 0px 70px 0px;
+    }
+    @media (max-width: 1200px) {
+      margin: 0px 0px 40px 0px;
+    }
+  }
+
+  // .services__items
+
+  &__items {
+    flex: 1 1 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 65px;
+    @media (max-width: 650px) {
+      display: grid;
+      grid-template-columns: auto;
+      gap: 30px;
+    }
+  }
+
+  // .services__item
+
+  &__item {
+  }
+
+  // .services__media
+
+  &__media {
+    position: relative;
+    padding: 165px 0px;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100vw;
+      top: 50%;
+      transform: translate(0px, -50%);
+      left: 64px;
+      height: 200vh;
+      background-color: #6257fe;
+    }
+    @media (max-width: 1520px) {
+      padding: 100px 0px;
+    }
+    @media (max-width: 991.98px) {
+      padding: 40px 0px 100px 0px;
+      &::before {
+        display: none;
+      }
+    }
+  }
+
+  // .services__image
+
+  &__image {
+    max-width: 427px;
+    position: relative;
+    z-index: 2;
+    img {
+      width: 100%;
+    }
+  }
+
+  // .services__phone
+
+  &__phone {
+    width: 342px;
+    z-index: 2;
+    position: absolute;
+    left: 290px;
+    bottom: -20px;
+    display: inline-block;
+    img {
+      width: 100%;
+    }
+    @media (max-width: 1320px) {
+      left: 0px;
+      bottom: 0px;
+      width: 60%;
+    }
+  }
+}
+
+.item-services {
+  // .item-services__icon
+
+  &__icon {
+    margin: 0px 0px 14px 0px;
+  }
+
+  // .item-services__title
 
   &__title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 1.45;
+    display: flex;
+    align-items: center;
+    margin: 0px 0px 22px 0px;
+    &::before {
+      content: "";
+      height: 1px;
+      flex: 1 1 auto;
+      background-color: #100c46;
+      margin: 0px 10px 0px 0px;
+    }
+  }
+
+  // .item-services__text
+
+  &__text {
+    font-size: 20px;
+    line-height: 1.6;
+    color: rgba(16, 12, 70, 0.8);
   }
 }
-.text {
-}
 
-//=================== about ================================//
+//=================== services ================================//
