--- a/css/style.css
+++ b/css/style.css
@@ -570,3 +570,150 @@ html {
   line-height: 1.6;
   color: rgba(16, 12, 70, 0.8);
 }
+
+.portfolio {
+  padding: 145px 0px;
+}
+@media (max-width: 1200px) {
+  .portfolio {
+    padding: 50px 0px 50px 0px;
+  }
+}
+.portfolio__header:not(:last-child) {
+  margin: 0px 0px 60px 0px;
+}
+@media (max-width: 1200px) {
+  .portfolio__header:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+}
+.portfolio__items {
+  display: grid;
+  gap: 23px;
+  grid-template-columns: repeat(4, 1fr);
+}
+@media (max-width: 991.98px) {
+  .portfolio__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 767.98px) {
+  .portfolio__items {
+    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.portfolio__item {
+  position: relative;
+  padding: 0px 0px 135% 0px;
+}
+.portfolio__item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.header-block_center {
+  text-align: center;
+}
+
+.team {
+  padding: 30px 0px 150px 0px;
+}
+@media (max-width: 1200px) {
+  .team {
+    padding: 0px 0px 50px 0px;
+  }
+}
+.team__header:not(:last-child) {
+  margin: 0px 0px 60px 0px;
+}
+@media (max-width: 1200px) {
+  .team__header:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+}
+.team__items {
+  display: grid;
+  gap: 23px;
+  grid-template-columns: repeat(4, 1fr);
+}
+@media (max-width: 991.98px) {
+  .team__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 767.98px) {
+  .team__items {
+    gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 600px) {
+  .team__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.header-block_center {
+  text-align: center;
+}
+
+.item-team {
+  position: relative;
+}
+.item-team__image {
+  position: relative;
+  padding: 0px 0px 135% 0px;
+}
+.item-team__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.item-team__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 15px;
+  background-color: rgba(98, 87, 254, 0.8);
+}
+.item-team__body {
+  color: #ffffff;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+.item-team__title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.3;
+  margin: 0px 0px 5px 0px;
+}
+.item-team__position {
+  font-size: 14px;
+  line-height: 2.28;
+}
+.social-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 13px;
+}
