--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,7 @@ html {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   text-align: center;
+  cursor: pointer;
 }
 .button:hover {
   background-color: #100c46;
@@ -644,7 +645,7 @@ html {
 }
 @media (max-width: 991.98px) {
   .team__items {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (max-width: 767.98px) {
@@ -716,4 +717,254 @@ html {
   display: -ms-flexbox;
   display: flex;
   gap: 13px;
+}
+.contacts__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 1250px) {
+  .contacts__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+}
+.contacts__body {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 41%;
+          flex: 0 0 41%;
+  padding: 0px 89px 0px 0px;
+}
+@media (max-width: 1250px) {
+  .contacts__body {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    padding: 0px 0px 40px 0px;
+  }
+}
+.contacts__header:not(:last-child) {
+  margin: 0px 0px 54px 0px;
+}
+@media (max-width: 1200px) {
+  .contacts__header:not(:last-child) {
+    margin: 0px 0px 20px 0px;
+  }
+}
+.contacts__info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 140px 0px;
+  position: relative;
+}
+.contacts__info::before {
+  content: "";
+  position: absolute;
+  width: 200vw;
+  left: 255px;
+  top: 0;
+  height: 100%;
+  background-color: #6257fe;
+}
+@media (max-width: 1250px) {
+  .contacts__info {
+    background-color: #6257fe;
+    margin: 0px -15px;
+    padding: 40px 15px 0px 15px;
+  }
+  .contacts__info::before {
+    left: -85px;
+  }
+}
+
+.form {
+  display: grid;
+  gap: 18px;
+}
+.form__line {
+  padding: 5px 20px;
+  background-color: #f4f3ff;
+}
+.form__line textarea {
+  resize: vertical;
+  height: 150px;
+}
+.form__label {
+  display: block;
+  line-height: 1.6;
+  color: rgba(16, 12, 70, 0.8);
+}
+.form__input {
+  width: 100%;
+  height: 45px;
+  background-color: transparent;
+  line-height: 1.6;
+  color: rgba(16, 12, 70, 0.8);
+}
+.form__input:focus {
+  outline: 1px solid #736cc7;
+}
+.button_dark {
+  background-color: #6257fe;
+  color: #fff;
+}
+.button_dark:hover {
+  background-color: #f6c9c9;
+  color: #6257fe;
+}
+
+.info-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 45px;
+}
+@media (max-width: 991.98px) {
+  .info-contacts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+}
+.info-contacts__map {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 74%;
+          flex: 0 0 74%;
+  height: 617px;
+  position: relative;
+}
+.info-contacts__map iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (max-width: 991.98px) {
+  .info-contacts__map {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    height: 450px;
+    margin: 0px -15px;
+  }
+}
+.info-contacts__content {
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  display: grid;
+  gap: 85px;
+}
+@media (max-width: 991.98px) {
+  .info-contacts__content {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+@media (max-width: 550px) {
+  .info-contacts__content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.info-contacts__block {
+  display: grid;
+  gap: 8px;
+}
+.info-contacts__title {
+  font-weight: 600;
+  padding: 0px 0px 0px 40px;
+  line-height: 25px;
+}
+.info-contacts__title_phone {
+  background: url("../img/contacts/01.svg") left no-repeat;
+}
+.info-contacts__title_email {
+  background: url("../img/contacts/02.svg") left no-repeat;
+}
+.info-contacts__title_address {
+  background: url("../img/contacts/03.svg") left no-repeat;
+}
+.info-contacts__item {
+  font-size: 16px;
+  line-height: 1.37;
+}
+.info-contacts__item:hover {
+  text-decoration: underline;
+}
+.info-contacts__text {
+  font-size: 16px;
+  line-height: 1.37;
+}
+
+.footer {
+  padding: 110px 0px 80px 0px;
+}
+@media (max-width: 991.98px) {
+  .footer {
+    padding: 40px 0px 40px 0px;
+  }
+}
+.footer__body {
+  position: relative;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 991.98px) {
+  .footer__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 15px;
+  }
+}
+.footer__copy {
+  text-align: center;
+}
+.footer__up {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  width: 70px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70px;
+          flex: 0 0 70px;
+  height: 70px;
+  background: #6257fe url("../img/footer/chevron-up.svg") center no-repeat;
+}
+@media (max-width: 991.98px) {
+  .footer__up {
+    position: static;
+  }
 }
