--- a/css/style.scss
+++ b/css/style.scss
@@ -269,6 +269,7 @@ html {
   border-radius: 3px;
   transition: all 0.3s ease 0s;
   text-align: center;
+  cursor: pointer;
   &:hover {
     background-color: #100c46;
     color: #fff;
@@ -620,7 +621,7 @@ html {
     gap: 23px;
     grid-template-columns: repeat(4, 1fr);
     @media (max-width: 991.98px) {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
     @media (max-width: 767.98px) {
       gap: 15px;
@@ -714,3 +715,275 @@ html {
 }
 
 //============== team =======================//
+
+//============ contacts ====================//
+
+.contacts {
+  // .contacts__container
+
+  &__container {
+    display: flex;
+    align-items: center;
+    @media (max-width: 1250px) {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  }
+
+  // .contacts__body
+
+  &__body {
+    flex: 0 0 41%;
+    padding: 0px 89px 0px 0px;
+    @media (max-width: 1250px) {
+      flex: 0 0 auto;
+      padding: 0px 0px 40px 0px;
+    }
+  }
+
+  // .contacts__header
+
+  &__header {
+    &:not(:last-child) {
+      margin: 0px 0px 54px 0px;
+    }
+    @media (max-width: 1200px) {
+      &:not(:last-child) {
+        margin: 0px 0px 20px 0px;
+      }
+    }
+  }
+
+  // .contacts__form
+
+  &__form {
+  }
+
+  // .contacts__info
+
+  &__info {
+    flex: 1 1 auto;
+    padding: 140px 0px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 200vw;
+      left: 255px;
+      top: 0;
+      height: 100%;
+      background-color: #6257fe;
+    }
+    @media (max-width: 1250px) {
+      background-color: #6257fe;
+      margin: 0px -15px;
+      padding: 40px 15px 0px 15px;
+      &::before {
+        left: -85px;
+      }
+    }
+  }
+}
+
+.form {
+  display: grid;
+  gap: 18px;
+  // .form__line
+
+  &__line {
+    padding: 5px 20px;
+    background-color: #f4f3ff;
+    textarea {
+      resize: vertical;
+      height: 150px;
+    }
+  }
+
+  // .form__label
+
+  &__label {
+    display: block;
+    line-height: 1.6;
+    color: rgba(16, 12, 70, 0.8);
+  }
+
+  // .form__input
+
+  &__input {
+    width: 100%;
+    height: 45px;
+    background-color: transparent;
+    line-height: 1.6;
+    color: rgba(16, 12, 70, 0.8);
+    &:focus {
+      outline: 1px solid #736cc7;
+    }
+  }
+
+  // .form__button
+
+  &__button {
+  }
+}
+
+.button {
+  // .button_dark
+
+  &_dark {
+    background-color: #6257fe;
+    color: #fff;
+    &:hover {
+      background-color: #f6c9c9;
+      color: #6257fe;
+    }
+  }
+}
+
+.info-contacts {
+  display: flex;
+  align-items: center;
+  gap: 45px;
+  @media (max-width: 991.98px) {
+    flex-direction: column-reverse;
+    align-items: stretch;
+  }
+  // .info-contacts__map
+
+  &__map {
+    flex: 0 0 74%;
+    height: 617px;
+    position: relative;
+    iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+    @media (max-width: 991.98px) {
+      flex: 1 1 auto;
+      height: 450px;
+      margin: 0px -15px;
+    }
+  }
+
+  // .info-contacts__content
+
+  &__content {
+    color: #fff;
+    position: relative;
+    z-index: 2;
+    display: grid;
+    gap: 85px;
+    @media (max-width: 991.98px) {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+      align-items: start;
+    }
+    @media (max-width: 550px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  // .info-contacts__block
+
+  &__block {
+    display: grid;
+    gap: 8px;
+  }
+
+  // .info-contacts__title
+
+  &__title {
+    font-weight: 600;
+    padding: 0px 0px 0px 40px;
+    line-height: 25px;
+    // .info-contacts__title_phone
+
+    &_phone {
+      background: url("../img/contacts/01.svg") left no-repeat;
+    }
+
+    // .info-contacts__title_email
+
+    &_email {
+      background: url("../img/contacts/02.svg") left no-repeat;
+    }
+
+    // .info-contacts__title_address
+
+    &_address {
+      background: url("../img/contacts/03.svg") left no-repeat;
+    }
+  }
+
+  // .info-contacts__item
+
+  &__item {
+    font-size: 16px;
+    line-height: 1.37;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  // .info-contacts__text
+
+  &__text {
+    font-size: 16px;
+    line-height: 1.37;
+  }
+}
+
+//============ contacts ====================//
+
+//============ footer ====================//
+
+.footer {
+  padding: 110px 0px 80px 0px;
+  @media (max-width: 991.98px) {
+    padding: 40px 0px 40px 0px;
+  }
+  // .footer__container
+
+  &__container {
+  }
+
+  // .footer__body
+
+  &__body {
+    position: relative;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: 991.98px) {
+      flex-direction: column-reverse;
+      gap: 15px;
+    }
+  }
+
+  // .footer__copy
+
+  &__copy {
+    text-align: center;
+  }
+
+  // .footer__up
+
+  &__up {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 2;
+    width: 70px;
+    flex: 0 0 70px;
+    height: 70px;
+    background: #6257fe url("../img/footer/chevron-up.svg") center no-repeat;
+    @media (max-width: 991.98px) {
+      position: static;
+    }
+  }
+}
+//============ footer ====================//
