--- a/css/style.css
+++ b/css/style.css
@@ -807,6 +807,7 @@ html {
   width: 100%;
   height: 45px;
   background-color: transparent;
+  border-radius: 5px;
   line-height: 1.6;
   color: rgba(16, 12, 70, 0.8);
 }
